example using amazon aws sqs
